--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
             ><span>My Cart</span>
           </button>
         </div>
+        <a href="#"
+          ><i class="fa-regular fa-circle-user" style="color: #000000"></i
+        ></a>
       </nav>
       <hr />
     </header>
