--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://blinkit.com/images/faviconChange.ico"
       type="image/x-icon"
     />
-    <title>Document</title>
+    <title>Blinkit Clone</title>
   </head>
   <body>
     <header>
