changed font size in section-4

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/483705a.jpg?ts=1657805510"
               alt="dairy-products-photo"
             />
-            <p class="title">Table White Egg-30 Pieced Tray</p>
+            <p class="title">Table White Egg Tray</p>
             <p class="weight">30 pieces</p>
             <p class="price">&#8377; 196</p>
             <button type="button">ADD</button>
@@ -266,7 +266,7 @@
               src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/24194a.jpg?ts=1661157751"
               alt="dairy-products-photo"
             />
-            <p class="title">Harvest Gold Hearty Brown</p>
+            <p class="title">Harvest Gold Brown</p>
             <p class="weight">400g</p>
             <p class="price">&#8377; 400</p>
             <button type="button">ADD</button>
@@ -296,7 +296,7 @@
               src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/45533a.jpg?ts=1654845569"
               alt="dairy-products-photo"
             />
-            <p class="title">Amul Salted Masti Curd</p>
+            <p class="title">Amul Salted Curd</p>
             <p class="weight">400g</p>
             <p class="price">&#8377; 43</p>
             <button type="button">ADD</button>
@@ -306,7 +306,7 @@
               src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/448095a.jpg?ts=1661157752"
               alt="dairy-products-photo"
             />
-            <p class="title">Harvest Gold White Bread</p>
+            <p class="title">Harvest Gold Bread</p>
             <p class="weight">400g</p>
             <p class="price">&#8377; 400</p>
             <button type="button">ADD</button>
