changed relative sizes and more responsive

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       </section>
       <section id="section-4">
         <h3>Dairy,Bread & Eggs</h3>
-        <div class="dairy-flexbox">
+        <div class="items-list">
           <div class="item">
             <img
               src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/86446a.jpg?ts=1641540332"
@@ -238,18 +238,22 @@
             />
             <p class="title">Mother Dairy Classic</p>
             <p class="weight">400g</p>
-            <p class="price">&#8377; 400</p>
-            <button type="button">ADD</button>
+            <div class="product-action">
+              <p class="price">&#8377; 400</p>
+              <button type="button">ADD</button>
+            </div>
           </div>
           <div class="item">
             <img
               src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/10491a.jpg"
               alt="dairy-products-photo"
             />
-            <p class="title">Nestle Milkmaid Sweetened...</p>
+            <p class="title">Nestle Milkmaid</p>
             <p class="weight">380g</p>
-            <p class="price">&#8377; 139</p>
-            <button type="button">ADD</button>
+            <div class="product-action">
+              <p class="price">&#8377; 139</p>
+              <button type="button">ADD</button>
+            </div>
           </div>
           <div class="item">
             <img
@@ -258,8 +262,10 @@
             />
             <p class="title">Table White Egg Tray</p>
             <p class="weight">30 pieces</p>
-            <p class="price">&#8377; 196</p>
-            <button type="button">ADD</button>
+            <div class="product-action">
+              <p class="price">&#8377; 196</p>
+              <button type="button">ADD</button>
+            </div>
           </div>
           <div class="item">
             <img
@@ -268,8 +274,10 @@
             />
             <p class="title">Harvest Gold Brown</p>
             <p class="weight">400g</p>
-            <p class="price">&#8377; 400</p>
-            <button type="button">ADD</button>
+            <div class="product-action">
+              <p class="price">&#8377; 400</p>
+              <button type="button">ADD</button>
+            </div>
           </div>
           <div class="item">
             <img
@@ -278,8 +286,10 @@
             />
             <p class="title">Mother Dairy Panner</p>
             <p class="weight">200g</p>
-            <p class="price">&#8377; 90</p>
-            <button type="button">ADD</button>
+            <div class="product-action">
+              <p class="price">&#8377; 90</p>
+              <button type="button">ADD</button>
+            </div>
           </div>
           <div class="item">
             <img
@@ -288,8 +298,10 @@
             />
             <p class="title">Amul Salted Butter</p>
             <p class="weight">500g</p>
-            <p class="price">&#8377; 275</p>
-            <button type="button">ADD</button>
+            <div class="product-action">
+              <p class="price">&#8377; 275</p>
+              <button type="button">ADD</button>
+            </div>
           </div>
           <div class="item">
             <img
@@ -298,8 +310,10 @@
             />
             <p class="title">Amul Salted Curd</p>
             <p class="weight">400g</p>
-            <p class="price">&#8377; 43</p>
-            <button type="button">ADD</button>
+            <div class="product-action">
+              <p class="price">&#8377; 43</p>
+              <button type="button">ADD</button>
+            </div>
           </div>
           <div class="item">
             <img
@@ -308,15 +322,54 @@
             />
             <p class="title">Harvest Gold Bread</p>
             <p class="weight">400g</p>
-            <p class="price">&#8377; 400</p>
-            <button type="button">ADD</button>
+            <div class="product-action">
+              <p class="price">&#8377; 400</p>
+              <button type="button">ADD</button>
+            </div>
+          </div>
+
+          <div class="item">
+            <img
+              src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/160a.jpg?ts=1654778815"
+              alt="dairy-products-photo"
+            />
+            <p class="title">Amul Salted Butter</p>
+            <p class="weight">500g</p>
+            <div class="product-action">
+              <p class="price">&#8377; 275</p>
+              <button type="button">ADD</button>
+            </div>
+          </div>
+          <div class="item">
+            <img
+              src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/483705a.jpg?ts=1657805510"
+              alt="dairy-products-photo"
+            />
+            <p class="title">Table White Egg Tray</p>
+            <p class="weight">30 pieces</p>
+            <div class="product-action">
+              <p class="price">&#8377; 196</p>
+              <button type="button">ADD</button>
+            </div>
+          </div>
+          <div class="item">
+            <img
+              src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/192a.jpg?ts=1644908944"
+              alt="dairy-products-photo"
+            />
+            <p class="title">Mother Dairy Panner</p>
+            <p class="weight">200g</p>
+            <div class="product-action">
+              <p class="price">&#8377; 90</p>
+              <button type="button">ADD</button>
+            </div>
           </div>
         </div>
       </section>
     </main>
     <footer>
-      Made with by
-      <i class="fa-solid fa-heart" style="color: #ff0000"></i> Ankit Panghal
+      Made with
+      <i class="fa-solid fa-heart" style="color: #ff0000"></i> by Ankit Panghal
     </footer>
   </body>
 </html>
